# MikuMikuWorld-ChartMaker

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
Depends/DirectXMath-master/Inc/: sal.h
MikuMikuWorld/: Application.cpp  Application.h  ApplicationConfiguration.cpp  ApplicationConfiguration.h  BinaryReader.cpp  BinaryWriter.cpp  Clipboard.cpp  CustomScoreJsonSerializer.cpp  CustomScoreJsonSerializer.h  DefaultLanguage.h  File.cpp  File.h  IO.cpp  ImGuiManager.cpp  Localization.cpp  MikuMikuWorld.vcxproj  MikuMikuWorld.vcxproj.filters  MinMax.cpp  NativeScoreSerializer.cpp  NativeScoreSerializer.h  Note.cpp  Note.h  NotesPreset.cpp  NotesPreset.h  OpenGlLoader.cpp  PreviewData.cpp  PreviewData.h  PreviewEngine.cpp  PreviewEngine.h  Score.cpp  Score.h  ScoreContext.cpp  ScoreContext.h  ScoreEditor.cpp  ScoreEditorTimeline.cpp  ScoreEditorTimeline.h  ScoreEditorWindows.cpp  ScorePreview.cpp  ScoreSerializeWindow.cpp  ScoreSerializeWindow.h  (+8 more)
MikuMikuWorld/Audio/: AudioManager.cpp  Sound.cpp  Waveform.h
MikuMikuWorld/res/i18n/: ja.csv  zh-cn.csv  zh-tw.csv
cmake/: Info.plist.in
